--- a/uts-creations/amtrakf40-ep.html
+++ b/uts-creations/amtrakf40-ep.html
@@ -90,13 +90,13 @@
         <div class="mod-exconrail-section">
             <div class="text-gray-400 mb-2">
                 <a href="../index.html" class="hover:underline">Home</a> >
-                <a href="../trurail-simulations.html" class="hover:underline">UTS Creations</a> >
+                <a href="../uts-creations.html" class="hover:underline">UTS Creations</a> >
                 <span>Amtrak F40PH EP</span>
             </div>
             <div class="flex justify-between items-start mb-2">
                 <div>
                     <h1 class="text-2xl font-bold">Amtrak F40PH EP</h1>
-                    <p class="text-gray-400">By <a href="../trurail-simulations.html" class="hover:underline">UTS Creations</a></p>
+                    <p class="text-gray-400">By <a href="../uts-creations.html" class="hover:underline">UTS Creations</a></p>
                 </div>
                 <a href="#" 
                    class="mod-exconrail-download-button download-trigger" 
