--- a/uts-creations/coaster-ep.html
+++ b/uts-creations/coaster-ep.html
@@ -102,8 +102,8 @@
                 <div class="download-section">
                     <a href="#" 
                        class="mod-exconrail-download-button download-trigger" 
-                       data-url="https://files.trainsimarchive.org/TRS%20-%20METX_F59PHI.rar"
-                       data-name="TRS - METX_F59PHI Pack.rar">
+                       data-url="https://files.trainsimarchive.org/UTS%20-%20Coaster%20Enhancement%20Pack%201.2.7z"
+                       data-name="UTS - Coaster Enhancement Pack 1.2.7z">
                         Download
                     </a>
                 </div>
@@ -144,9 +144,7 @@
                         <li>Alerter</li>
                         <li>BiLevel Indicator Lights</li>
                         <li>Clean Cab Radio</li>
-                        <li>Door Control</li>
                         <li>Emptying Sander (Feature is optional and can be disabled via the configuration files.)</li>
-                        <li>Head-End Power</li>
                         <li>Independent Brake Bail-Off</li>
                         <li>Isolation Switch</li>
                         <li>Pneumatic Control Switch</li>
@@ -158,18 +156,18 @@
                         <li><a href="https://www.store.searchlight-simulations.com/emd-16n-710g3b-enhancement-pack" target="_blank">EMD 16N-710G3B Sound Enhancement Pack</a></li>
                     </ul>
 
-                    <div class="file-details-box" data-name="TRS - METX_F59PHI.rar">
+                    <div class="file-details-box" data-name="UTS - Coaster Enhancement Pack 1.2.7z">
                         <a href="#" 
                            class="download-trigger" 
-                           data-url="https://files.trainsimarchive.org/TRS%20-%20METX_F59PHI.rar"
-                           data-name="TRS - METX_F59PHI.rar"
+                           data-url="https://files.trainsimarchive.org/UTS%20-%20Coaster%20Enhancement%20Pack%201.2.7z"
+                           data-name="UTS - Coaster Enhancement Pack 1.2.7z"
                            style="display: block; padding: 1rem; background: #1a1a1a; border: 2px solid #333; border-radius: 8px; text-decoration: none; transition: all 0.2s; cursor: pointer;">
                             <div style="display: flex; align-items: center; gap: 0.75rem;">
                                 <div style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; background: #252525; border-radius: 6px;">
                                     <i class="fas fa-file-archive" style="font-size: 1.25rem; color: #888;"></i>
                                 </div>
                                 <div style="flex: 1;">
-                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">TRS - METX_F59PHI.rar</div>
+                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">UTS - Coaster Enhancement Pack 1.2.7z</div>
                                     <div style="display: flex; gap: 1rem; font-size: 0.8rem; color: #888; margin-top: 0.2rem; flex-wrap: wrap;">
                                         <span><i class="fas fa-hdd" style="margin-right: 0.25rem;"></i><span data-file-size>Loading...</span></span>
                                         <span><i class="fas fa-clock" style="margin-right: 0.25rem;"></i><span data-file-uploaded>Loading...</span></span>
