--- a/uts-creations.html
+++ b/uts-creations.html
@@ -273,11 +273,11 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                        <a href="uts-creations/alco-rs-11-ep.html" class="mod-card-link">
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/ef8207_18cb2edcbce94eff9eedd7d859bb2c9a~mv2.png');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="uts-creations/alco-rs-11-ep.html" class="mod-card-link">
                                 <h3 class="mod-card-title">RS-11 Enhancement Pack</h3>
                             </a>
                             <p class="mod-card-description">Experience the 1960s ALCo thrash once again!</p>
