--- a/trurail-simulations/amtk-p42dc-ep.html
+++ b/trurail-simulations/amtk-p42dc-ep.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Enhancement of General Electric's P42DC locomotive ordered by Amtrak and VIA Rail.">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
-    <title>Amtrak GE P42DC Enhancement Pack - Train Simulator Mod Archive</title>
+    <title>Amtrak GE P42DC EP - Train Simulator Mod Archive</title>
     
     <!-- Favicon -->
     <link rel="icon" type="image/jpeg" href="https://files.trainsimarchive.org/media/favicon.jpg">
@@ -13,7 +13,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.trainsimarchive.org/trurail-simulations/amtk-p42dc-ep.html">
-    <meta property="og:title" content="Amtrak GE P42DC Enhancement Pack">
+    <meta property="og:title" content="Amtrak GE P42DC EP">
     <meta property="og:description" content="Enhancement of General Electric's P42DC locomotive ordered by Amtrak and VIA Rail.">
     <meta property="og:image" content="https://files.trainsimarchive.org/media/14a601_f6c0c893264d49cc83e8ecd82b7acb07~mv2.png">
     <meta property="og:site_name" content="Train Simulator Mod Archive">
@@ -21,7 +21,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.trainsimarchive.org/trurail-simulations/amtk-p42dc-ep.html">
-    <meta property="twitter:title" content="Amtrak GE P42DC Enhancement Pack">
+    <meta property="twitter:title" content="Amtrak GE P42DC EP">
     <meta property="twitter:description" content="Enhancement of General Electric's P42DC locomotive ordered by Amtrak and VIA Rail.">
     <meta property="twitter:image" content="https://files.trainsimarchive.org/media/14a601_f6c0c893264d49cc83e8ecd82b7acb07~mv2.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -92,11 +92,11 @@
             <div class="text-gray-400 mb-2">
                 <a href="../index.html" class="hover:underline">Home</a> >
                 <a href="../trurail-simulations.html" class="hover:underline">TruRail Simulations</a> >
-                <span>Amtrak GE P42DC Enhancement Pack</span>
+                <span>Amtrak GE P42DC EP</span>
             </div>
             <div class="flex justify-between items-start mb-2">
                 <div>
-                    <h1 class="text-2xl font-bold">Amtrak GE P42DC Enhancement Pack</h1>
+                    <h1 class="text-2xl font-bold">Amtrak GE P42DC EP</h1>
                     <p class="text-gray-400">By <a href="../trurail-simulations.html" class="hover:underline">TruRail Simulations</a></p>
                 </div>
                 <div class="download-section">
@@ -112,7 +112,7 @@
                 <div>
                     <div class="mod-gallery">
                         <div class="mod-gallery-main">
-                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/14a601_f6c0c893264d49cc83e8ecd82b7acb07~mv2.png" alt="Amtrak GE P42DC Enhancement Pack">
+                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/14a601_f6c0c893264d49cc83e8ecd82b7acb07~mv2.png" alt="Amtrak GE P42DC EP">
                             <div class="gallery-controls">
                                 <button class="gallery-nav-btn gallery-nav-prev" onclick="event.stopPropagation(); manualNavigateGallery(-1)" aria-label="Previous">
                                     <i class="fas fa-chevron-left"></i>
