--- a/uts-creations/alco-rs-11-ep.html
+++ b/uts-creations/alco-rs-11-ep.html
@@ -90,18 +90,18 @@
         <div class="mod-exconrail-section">
             <div class="text-gray-400 mb-2">
                 <a href="../index.html" class="hover:underline">Home</a> >
-                <a href="../trurail-simulations.html" class="hover:underline">UTS Creations</a> >
+                <a href="../uts-creations.html" class="hover:underline">UTS Creations</a> >
                 <span>ALCO RS-11 EP</span>
             </div>
             <div class="flex justify-between items-start mb-2">
                 <div>
                     <h1 class="text-2xl font-bold">ALCO RS-11 EP</h1>
-                    <p class="text-gray-400">By <a href="../trurail-simulations.html" class="hover:underline">UTS Creations</a></p>
+                    <p class="text-gray-400">By <a href="../uts-creations.html" class="hover:underline">UTS Creations</a></p>
                 </div>
                 <a href="#" 
                    class="mod-exconrail-download-button download-trigger" 
-                   data-url="https://files.trainsimarchive.org/UTS%20-%20Amtrak%20F40PH%20EP.7z"
-                   data-name="UTS - ALCO RS-11 EP.7z">
+                   data-url="https://files.trainsimarchive.org/CJPS%20-%20ALCo%20RS-11%20Enhancement%20Pack%206522.7z"
+                   data-name="CJPS - ALCo RS-11 Enhancement Pack 6522.7z">
                     Download
                 </a>
             </div>
@@ -127,7 +127,7 @@
                             </div>
                         </div>
                     </div>
-                    <p class="page-updated">Page Updated: 12/06/2025</p>
+                    <p class="page-updated">Page Updated: 12/14/2025</p>
                 </div>
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
@@ -140,21 +140,21 @@
                     </ul>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Requirements</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
-                        <li><a href="https://store.steampowered.com/app/208296/Train_Simulator_Amtrak_F40PH_California_Zephyr_Loco_AddOn/" target="_blank">Alco RS-11 Lehigh-Valley (either/or)</a></li>
-                        <li><a href="https://store.steampowered.com/app/208296/Train_Simulator_Amtrak_F40PH_California_Zephyr_Loco_AddOn/" target="_blank">PRR Alco RS11 Loco Add-On (either/or)</a></li>
+                        <li><a href="https://virtual-railroads.de/gb/diesel-locomotives/186-alco-rs-11-lehigh-valley.html" target="_blank">Alco RS-11 Lehigh-Valley (either/or)</a></li>
+                        <li><a href="https://store.steampowered.com/app/222574/Train_Simulator_PRR_Alco_RS11_Loco_AddOn/" target="_blank">PRR Alco RS11 Loco Add-On (either/or)</a></li>
                     </ul>
-                    <div class="file-details-box" data-name="UTS - ALCO RS-11 EP.7z">
+                    <div class="file-details-box" data-name="CJPS - ALCo RS-11 Enhancement Pack 6522.7z">
                         <a href="#" 
                            class="download-trigger" 
-                           data-url="https://files.trainsimarchive.org/UTS%20-%20Amtrak%20F40PH%20EP.7z"
-                           data-name="UTS - ALCO RS-11 EP.7z"
+                           data-url="https://files.trainsimarchive.org/CJPS%20-%20ALCo%20RS-11%20Enhancement%20Pack%206522.7z"
+                           data-name="CJPS - ALCo RS-11 Enhancement Pack 6522.7z"
                            style="display: block; padding: 1rem; background: #1a1a1a; border: 2px solid #333; border-radius: 8px; text-decoration: none; transition: all 0.2s; cursor: pointer;">
                             <div style="display: flex; align-items: center; gap: 0.75rem;">
                                 <div style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; background: #252525; border-radius: 6px;">
                                     <i class="fas fa-file-archive" style="font-size: 1.25rem; color: #888;"></i>
                                 </div>
                                 <div style="flex: 1;">
-                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">UTS - ALCO RS-11 EP.7z</div>
+                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">CJPS - ALCo RS-11 Enhancement Pack 6522.7z</div>
                                     <div style="display: flex; gap: 1rem; font-size: 0.8rem; color: #888; margin-top: 0.2rem; flex-wrap: wrap;">
                                         <span><i class="fas fa-hdd" style="margin-right: 0.25rem;"></i><span data-file-size>Loading...</span></span>
                                         <span><i class="fas fa-clock" style="margin-right: 0.25rem;"></i><span data-file-uploaded>Loading...</span></span>
