--- a/trurail-simulations/csx-road-bundle.html
+++ b/trurail-simulations/csx-road-bundle.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The download contains 3 locomotives (GE AC4400CW, Road Slug) and 6 freight cars (Coke Express Hoppers, 100Tn Coal Hoppers, Auto Parts Boxcar, ACF 60ft Boxcar, and Coil Car).">
+    <meta name="description" content="Mega CSX pack consisting of 3 locomotives and 6 freight cars.">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
     <title>CSX Road Bundle - Train Simulator Mod Archive</title>
     
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.trainsimarchive.org/trurail-simulations/csx-road-bundle.html">
     <meta property="og:title" content="CSX Road Bundle">
-    <meta property="og:description" content="The download contains 3 locomotives (GE AC4400CW, Road Slug) and 6 freight cars (Coke Express Hoppers, 100Tn Coal Hoppers, Auto Parts Boxcar, ACF 60ft Boxcar, and Coil Car).">
+    <meta property="og:description" content="Mega CSX pack consisting of 3 locomotives and 6 freight cars.">
     <meta property="og:image" content="https://files.trainsimarchive.org/media/Untitled.png">
     <meta property="og:site_name" content="Train Simulator Mod Archive">
     
@@ -22,7 +22,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.trainsimarchive.org/trurail-simulations/csx-road-bundle.html">
     <meta property="twitter:title" content="CSX Road Bundle">
-    <meta property="twitter:description" content="The download contains 3 locomotives (GE AC4400CW, Road Slug) and 6 freight cars (Coke Express Hoppers, 100Tn Coal Hoppers, Auto Parts Boxcar, ACF 60ft Boxcar, and Coil Car).">
+    <meta property="twitter:description" content="Mega CSX pack consisting of 3 locomotives and 6 freight cars.">
     <meta property="twitter:image" content="https://files.trainsimarchive.org/media/Untitled.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
