--- a/uts-creations/u34ch-sound-revamp.html
+++ b/uts-creations/u34ch-sound-revamp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This download includes a new soundset for both the U34CH, Comet I Cab Car and Passenger Coaches">
+    <meta name="description" content="New soundset for both the U34CH, Comet I Cab Car and Passenger Coaches">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
     <title>U34CH Sound Revamp - Train Simulator Mod Archive</title>
     
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.trainsimarchive.org/uts-creations/u34ch-sound-revamp.html">
     <meta property="og:title" content="U34CH Sound Revamp">
-    <meta property="og:description" content="This download includes a new soundset for both the U34CH, Comet I Cab Car and Passenger Coaches">
+    <meta property="og:description" content="New soundset for both the U34CH, Comet I Cab Car and Passenger Coaches">
     <meta property="og:image" content="https://files.trainsimarchive.org/media/u34ch-sound-revamp.png">
     <meta property="og:site_name" content="Train Simulator Mod Archive">
     
@@ -22,7 +22,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.trainsimarchive.org/uts-creations/u34ch-sound-revamp.html">
     <meta property="twitter:title" content="U34CH Sound Revamp">
-    <meta property="twitter:description" content="This download includes a new soundset for both the U34CH, Comet I Cab Car and Passenger Coaches">
+    <meta property="twitter:description" content="New soundset for both the U34CH, Comet I Cab Car and Passenger Coaches">
     <meta property="twitter:image" content="https://files.trainsimarchive.org/media/u34ch-sound-revamp.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
