--- a/uts-creations/alco-rs-11-ep.html
+++ b/uts-creations/alco-rs-11-ep.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is a comprehensive set of enhancements for the virtualRailroads Lehigh Valley RS-11 along with the Pennsylvania Railroad RS-11 available on the steam store.">
+    <meta name="description" content="Comprehensive set of enhancements for the virtualRailroads Lehigh Valley RS-11 along with the Pennsylvania Railroad RS-11.">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
     <title>ALCO RS-11 EP - Train Simulator Mod Archive</title>
     
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.trainsimarchive.org/uts-creations/alco-rs-11-ep.html">
     <meta property="og:title" content="ALCO RS-11 EP">
-    <meta property="og:description" content="This is a comprehensive set of enhancements for the virtualRailroads Lehigh Valley RS-11 along with the Pennsylvania Railroad RS-11 available on the steam store.">
+    <meta property="og:description" content="Comprehensive set of enhancements for the virtualRailroads Lehigh Valley RS-11 along with the Pennsylvania Railroad RS-11.">
     <meta property="og:image" content="https://files.trainsimarchive.org/media/amtrakf40ep.png">
     <meta property="og:site_name" content="Train Simulator Mod Archive">
     
@@ -22,7 +22,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.trainsimarchive.org/uts-creations/alco-rs-11-ep.html">
     <meta property="twitter:title" content="ALCO RS-11 EP">
-    <meta property="twitter:description" content="This is a comprehensive set of enhancements for the virtualRailroads Lehigh Valley RS-11 along with the Pennsylvania Railroad RS-11 available on the steam store.">
+    <meta property="twitter:description" content="Comprehensive set of enhancements for the virtualRailroads Lehigh Valley RS-11 along with the Pennsylvania Railroad RS-11.">
     <meta property="twitter:image" content="https://files.trainsimarchive.org/media/amtrakf40ep.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
