--- a/uts-creations.html
+++ b/uts-creations.html
@@ -201,11 +201,11 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
+                        <a href="uts-creations/ge-u-boat-ep.html" class="mod-card-link">
                             <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="uts-creations/ge-u-boat-ep.html" class="mod-card-link">
                                 <h3 class="mod-card-title">GE U-Boat Enhancement Pack</h3>
                             </a>
                             <p class="mod-card-description">This download contains a set of enhancements for the DTG U36C DLC.</p>
