--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -231,7 +231,7 @@
                 <h2 class="category-title">Patches</h2>
                 <div class="mods-grid">
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
+                        <a href="trurail-simulations/arizona-divide-logo-patch.html" class="mod-card-link">
                             <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_a5e2a0187f664dd5baa1e832189ae5a7~mv2.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
@@ -243,11 +243,11 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                        <a href="trurail-simulations/sd80mac-sound-pack.html" class="mod-card-link">
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_83b8793131c04f2a83e90d91d1705374~mv2.png');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/sd80mac-sound-pack.html" class="mod-card-link">
                                 <h3 class="mod-card-title">SD80MAC Sound Patch</h3>
                             </a>
                             <p class="mod-card-description">A simple patch to prevent the CSX SD80MAC from crashing when put into N8.</p>
