--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -255,11 +255,11 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                        <a href="trurail-simulations/superliner-physics-patch.html" class="mod-card-link">
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_6117739776cf4d398011894ed9beaca5~mv2.png');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/superliner-physics-patch.html" class="mod-card-link">
                                 <h3 class="mod-card-title">Superliner Physics Patch</h3>
                             </a>
                             <p class="mod-card-description">A simple patch to adjust the drag of the superliner cars.</p>
