--- a/cleartracks/ex-conrail-c40-8-pack.html
+++ b/cleartracks/ex-conrail-c40-8-pack.html
@@ -132,7 +132,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains four repaints of GE's C40-8 locomotive ordered by Conrail to depict units acquired by CSX.
+                        Four repaints of GE's C40-8 locomotive ordered by Conrail to depict units acquired by CSX.
                     </p>  
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
