--- a/trurail-simulations/amtk-p42dc-ep.html
+++ b/trurail-simulations/amtk-p42dc-ep.html
@@ -156,7 +156,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains an enhancement of General Electric's P42DC locomotive ordered by Amtrak and VIA Rail. Depicted is the "Phase V" Amtrak scheme.
+                        Enhancement of General Electric's P42DC locomotive ordered by Amtrak and VIA Rail. Depicted is the "Phase V" Amtrak scheme.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
