--- a/trurail-simulations/atsf-u36c.html
+++ b/trurail-simulations/atsf-u36c.html
@@ -135,7 +135,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains a repaint of GE's U36C in Santa Fe's 'Bluebonnet' scheme.
+                        Repaint of GE's U36C in Santa Fe's 'Bluebonnet' scheme.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
