--- a/trurail-simulations/autoflood-iii-hopper.html
+++ b/trurail-simulations/autoflood-iii-hopper.html
@@ -166,7 +166,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains 11 variants of the Autoflood Hopper.
+                        11 variants of the Autoflood Hopper.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
