--- a/trurail-simulations/bn-fuel-tender.html
+++ b/trurail-simulations/bn-fuel-tender.html
@@ -138,7 +138,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains a reskin of the JR 23K tank car into the Burlington Northern's fuel tenders.
+                        Reskin of the JR 23K tank car into the Burlington Northern's fuel tenders.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
