--- a/trurail-simulations/bnsf-25th-anniversary-es44ac.html
+++ b/trurail-simulations/bnsf-25th-anniversary-es44ac.html
@@ -154,7 +154,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        A repaint of GE's ES44AC into BNSF's 25th Anniversary scheme.
+                        Repaint of GE's ES44AC into BNSF's 25th Anniversary scheme.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
