--- a/trurail-simulations/bnsf-c44-9w-heritage-2.html
+++ b/trurail-simulations/bnsf-c44-9w-heritage-2.html
@@ -135,7 +135,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains a visual and audible overhaul of the BNSF C44-9W DLC, focusing on the H2 scheme.
+                        Visual and audible overhaul of the BNSF C44-9W DLC, focusing on the H2 scheme.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
