--- a/trurail-simulations/bnsf-sd70ace.html
+++ b/trurail-simulations/bnsf-sd70ace.html
@@ -142,7 +142,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains a repaint of EMD's SD70ACe in BNSF "Heritage 3" livery.
+                        Repaint of EMD's SD70ACe in BNSF "Heritage 3" livery.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
