--- a/trurail-simulations/bo-gp40-2-chessie-system.html
+++ b/trurail-simulations/bo-gp40-2-chessie-system.html
@@ -132,7 +132,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains a repaint of EMD's GP40-2 into Baltimore & Ohio (Chessie System).
+                        Repaint of EMD's GP40-2 into Baltimore & Ohio (Chessie System).
                     </p>  
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
