--- a/trurail-simulations/canpac-ac4400cw-striped-plow.html
+++ b/trurail-simulations/canpac-ac4400cw-striped-plow.html
@@ -144,7 +144,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains an repaint of GE's AC4400CW into the CP 'Striped Plow' scheme.
+                        Repaint of GE's AC4400CW into the CP 'Striped Plow' scheme.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
