--- a/trurail-simulations/cnw-emd-e8.html
+++ b/trurail-simulations/cnw-emd-e8.html
@@ -135,7 +135,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains a repaint of the EMD E8 in the classic Chicago & Northwestern scheme.
+                        Repaint of the EMD E8 in the classic Chicago & Northwestern scheme.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
