--- a/trurail-simulations/conrail-u36b.html
+++ b/trurail-simulations/conrail-u36b.html
@@ -151,7 +151,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains a repaint of GE's U36B into Conrail blue.
+                        Repaint of GE's U36B into Conrail blue.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
