--- a/trurail-simulations/csx-road-bundle.html
+++ b/trurail-simulations/csx-road-bundle.html
@@ -169,7 +169,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains 3 locomotives (GE AC4400CW, Road Slug) and 5 freight cars (Coke Express Hoppers, 100Tn Coal Hoppers, Auto Parts Boxcar, ACF 60ft Boxcar, and Coil Car).
+                        3 locomotives (GE AC4400CW, Road Slug) and 5 freight cars (Coke Express Hoppers, 100Tn Coal Hoppers, Auto Parts Boxcar, ACF 60ft Boxcar, and Coil Car).
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
