--- a/trurail-simulations/southern-pacific-gp9.html
+++ b/trurail-simulations/southern-pacific-gp9.html
@@ -150,7 +150,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains a repaint of EMD's GP9 into Southern Pacific's 'Bloody Nose' paint scheme.
+                        Repaint of EMD's GP9 into Southern Pacific's 'Bloody Nose' paint scheme.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
