--- a/trurail-simulations/united-way-sd40-2.html
+++ b/trurail-simulations/united-way-sd40-2.html
@@ -135,7 +135,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains Union Pacific #3300 Painted in a patriotic livery for the 1994 United Way Campaign.
+                        Union Pacific #3300 Painted in a patriotic livery for the 1994 United Way Campaign.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
