--- a/trurail-simulations/up-non-dyno-gp38-2.html
+++ b/trurail-simulations/up-non-dyno-gp38-2.html
@@ -135,7 +135,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains a variant of Union Pacific's GP38-2 with no dynamic brake fan
+                        Variant of Union Pacific's GP38-2 with no dynamic brake fan
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
