--- a/uts-creations/coaster-ep.html
+++ b/uts-creations/coaster-ep.html
@@ -135,7 +135,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains the new Coaster pack with new audio and skins for the F59PHI and the bi level cars.
+                        New audio and textures for the F59PHI and the bi level cars.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
