--- a/uts-creations/ge-u-boat-ep.html
+++ b/uts-creations/ge-u-boat-ep.html
@@ -135,7 +135,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download consists delivers a comprehensive set of upgrades for the U-Boat locomotive dlcs.
+                        Comprehensive set of upgrades for the U-Boat locomotive dlcs.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
