--- a/uts-creations/retro-ge-genesis-pack.html
+++ b/uts-creations/retro-ge-genesis-pack.html
@@ -132,7 +132,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains a rRepresentation of Amtrak's P40DC and P42DC locomotives in Phase III and IV liveries.
+                        Representation of Amtrak's P40DC and P42DC locomotives in Phase III and IV liveries.
                     </p>  
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
