--- a/cleartracks/wp-caboose-pack.html
+++ b/cleartracks/wp-caboose-pack.html
@@ -144,7 +144,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains a pack of Bay Window Cabooses in Western Pacific liveries.
+                        Pack of Bay Window Cabooses in Western Pacific liveries.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
