--- a/trurail-simulations/arizona-divide-logo-patch.html
+++ b/trurail-simulations/arizona-divide-logo-patch.html
@@ -135,7 +135,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains an patch for the Arizona Divide: Winslow - Williams Route, fixing the lack of logos on the rolling stock when it was released.
+                        Patch for the Arizona Divide: Winslow - Williams Route, fixing the lack of logos on the rolling stock when it was released.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
