--- a/trurail-simulations/berkshire-texture-ep.html
+++ b/trurail-simulations/berkshire-texture-ep.html
@@ -156,7 +156,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains an texture and overall enhancement for the NPK S-2 Class 'Berkshire' DLC.
+                        Texture and overall enhancement for the NPK S-2 Class 'Berkshire' DLC.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
