--- a/trurail-simulations/bn-sd70mac.html
+++ b/trurail-simulations/bn-sd70mac.html
@@ -153,7 +153,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains a repaint of EMD's SD70MAC into multiple BN/BNSF variants.
+                        Repaint of EMD's SD70MAC into multiple BN/BNSF variants.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
