--- a/trurail-simulations/sd80mac-sound-pack.html
+++ b/trurail-simulations/sd80mac-sound-pack.html
@@ -135,7 +135,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains a patch to prevent the CSX SD80MAC from crashing when put into N8.
+                        Patch to prevent the CSX SD80MAC from crashing when put into N8.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
