--- a/trurail-simulations/up-fef-3-whistle.html
+++ b/trurail-simulations/up-fef-3-whistle.html
@@ -135,7 +135,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains a simple whistle that represents the one heard prior to the removal of UP 844's mars light.
+                        Simple whistle that represents the one heard prior to the removal of UP 844's mars light.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
