--- a/uts-creations/amtrakf40-ep.html
+++ b/uts-creations/amtrakf40-ep.html
@@ -132,7 +132,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains new scripts, flares and much more for the F40PH DLC.
+                        New scripts, flares and much more for the F40PH DLC.
                     </p>  
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
