--- a/uts-creations.html
+++ b/uts-creations.html
@@ -202,7 +202,7 @@
                     
                     <div class="mod-card">
                         <a href="uts-creations/ge-u-boat-ep.html" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/AAzXCkdjD94MCu6QWE9q7Oqbh.png');"></div>
                         </a>
                         <div class="mod-card-content">
                             <a href="uts-creations/ge-u-boat-ep.html" class="mod-card-link">
