--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -441,11 +441,11 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                        <a href="trurail-simulations/njt-heritage-pack.html" class="mod-card-link">
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_17be1863b38b4b88a58237181ad7f160~mv2.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/njt-heritage-pack.html" class="mod-card-link">
                                 <h3 class="mod-card-title">NJT Heritage Pack</h3>
                             </a>
                             <p class="mod-card-description">Three repaints of NJT's ALP-45DP, ALP-46, and GP40PH-2B</p>
