--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -369,11 +369,11 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                        <a href="trurail-simulations/ex-seaboard-system-gp38-2.html" class="mod-card-link">
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_db35939393174ee5baaa4e143d4463fe~mv2.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/ex-seaboard-system-gp38-2.html" class="mod-card-link">
                                 <h3 class="mod-card-title">Ex-Seaboard System GP38-2</h3>
                             </a>
                             <p class="mod-card-description">Repaint of an EMD GP38-2 to depict a patched Seaboard System GP38-2.</p>
@@ -448,7 +448,7 @@
                             <a href="trurail-simulations/njt-heritage-pack.html" class="mod-card-link">
                                 <h3 class="mod-card-title">NJT Heritage Pack</h3>
                             </a>
-                            <p class="mod-card-description">Three repaints of NJT's ALP-45DP, ALP-46, and GP40PH-2B</p>
+                            <p class="mod-card-description">Three repaints of NJT's ALP-45DP, ALP-46, and GP40PH-2B into Heritage schemes.</p>
                         </div>
                     </div>
                     
