--- a/trurail-simulations/njt-heritage-pack.html
+++ b/trurail-simulations/njt-heritage-pack.html
@@ -155,7 +155,7 @@
                     </ul>
                     </ul>
                     <div class="file-details-box" data-name="TRS - NJT_Pack.zip">
-                        <a href="#" 
+                        <a href="" 
                            class="download-trigger" 
                            data-url="https://files.trainsimarchive.org/TRS%20-%20NJT_Pack.zip"
                            data-name="TRS - NJT_Pack.zip"
