--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
                     </li>
                 </ul>
             </div>
+            <!-- Top downloads box (dynamically populated) -->
+            <div class="sidebar-section mt-4" id="topDownloadsBox">
+                <h3 class="text-base font-bold mb-3">Top Downloads</h3>
+                <div id="topDownloadsContainer">
+                    <p class="muted">Loading top downloads...</p>
+                </div>
+            </div>
         </div>
     </main>
     <footer id="dynamicFooter">
