--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="contributors">Contributors</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="archiveDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="" id="archiveDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Archive
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="archiveDropdown">
@@ -84,7 +84,6 @@
             <a href="cleartracks" class="mobile-nav-link mobile-nav-sublink">ClearTracks</a>
             <a href="uts-creations" class="mobile-nav-link mobile-nav-sublink">UTS Creations</a>
             <a href="east-coast-simulations" class="mobile-nav-link mobile-nav-sublink">East Coast Simulations</a>
-            <a href="virtual-rail-creations" class="mobile-nav-link mobile-nav-sublink">Virtual Rail Creations</a>
         </div>
     </nav>
     <div class="privacy-main-wide">
