--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -416,11 +416,11 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                        <a href="trurail-simulations/milwaukee-road-u36c" class="mod-card-link">
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_3e98aab244c04f7fbdd57ecef390a17d~mv2.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/milwaukee-road-u36c" class="mod-card-link">
                                 <h3 class="mod-card-title">Milwaukee Road U36C</h3>
                             </a>
                             <p class="mod-card-description">Repaint of GE's U36C into Milwaukee Road paint scheme.</p>
