--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Train Simulator Mod Archive - The largest web archive of delisted and lost Train Simulator Classic content.">
-    <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
-    <title>Train Simulator Mod Archive</title>
+    <meta name="description" content="Train Simulator Mod Archive - The largest official web archive of delisted and lost Train Simulator Classic content.">
+    <meta name="keywords" content="train simulator, mods, archive, trurail simulations, clearTracks, UTS creations, east coast simulations">
+    <title>Home - Train Simulator Mod Archive</title>
     <link rel="icon" type="image/jpeg" href="https://files.trainsimarchive.org/media/favicon.jpg">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.trainsimarchive.org/">
@@ -83,8 +83,8 @@
     <main>
         <div class="space-y-6">
             <section class="sidebar-section">
-                <h1 class="font-bold text-xl">Train Simulator Mod Archive</h1>
-                <p class="mt-3">Welcome to Train Simulator Mod Archive, the largest web archive of delisted and lost Train Simulator Classic content. We currently host archived content from TruRail Simulations, ClearTracks, UTS Creations and East Coast Simulations.</p>
+                <h1 class="font-bold text-xl">Welcome to Train Simulator Mod Archive!</h1>
+                <p class="mt-3">Welcome to Train Simulator Mod Archive, the largest official web archive of delisted and lost Train Simulator Classic content. We currently host archived content from TruRail Simulations, ClearTracks, UTS Creations and East Coast Simulations.</p>
                 <p class="mt-3">To look through our catalog of content, please use the provided links at the top of the page, or use the Search function. This project was started in September of 2023 and we hope to continue archiving lost content from the entire Train Simulator Classic scene for the foreseeable future.</p>
             </section>
             <section>
