--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Train Simulator Mod Archive - The largest official web archive of delisted and lost Train Simulator Classic content.">
+    <meta name="description" content="The largest official web archive of delisted and lost Train Simulator Classic content.">
     <meta name="keywords" content="train simulator, mods, archive, trurail simulations, clearTracks, UTS creations, east coast simulations">
+    <meta name="application-name" content="Train Simulator Mod Archive">
     <title>Home - Train Simulator Mod Archive</title>
+
     <link rel="icon" type="image/jpeg" href="https://files.trainsimarchive.org/media/favicon.jpg">
+
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.trainsimarchive.org/">
-    <meta property="og:title" content="Train Simulator Mod Archive">
+    <meta name="application-name" content="Train Simulator Mod Archive">
     <meta property="og:description" content="The largest web archive of delisted and lost Train Simulator Classic content.">
     <meta property="og:image" content="https://files.trainsimarchive.org/media/tsma-logo.png">
     <meta property="og:site_name" content="Train Simulator Mod Archive">
+
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.trainsimarchive.org/">
     <meta property="twitter:title" content="Train Simulator Mod Archive">
@@ -25,6 +29,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom-dark.css" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body class="body-with-fixed-header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
