--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -31,6 +31,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom-dark.css" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
 </head>
 <body class="body-with-fixed-header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
