--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="application-name" content="Train Simulator Mod Archive">
     <title>Home - Train Simulator Mod Archive</title>
 
-    <link rel="icon" type="image/jpeg" href="https://files.trainsimarchive.org/media/favicon.jpg">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.trainsimarchive.org/">
@@ -29,10 +28,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom-dark.css" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
 </head>
 <body class="body-with-fixed-header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
