--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="application-name" content="Train Simulator Mod Archive">
     <title>Home - Train Simulator Mod Archive</title>
 
+    <link rel="icon" type="image/jpeg" href="favicon/favicon.ico">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.trainsimarchive.org/">
