--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Visual and audible overhaul of the BNSF C44-9W DLC, focusing on the H1 scheme. ">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
     <title>TruRail Simulations - Train Simulator Mod Archive</title>
+
+    <link rel="icon" type="image/jpeg" href="favicon/favicon.ico">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
