--- a/trurail-simulations/milwaukee-road-u36c.html
+++ b/trurail-simulations/milwaukee-road-u36c.html
@@ -8,7 +8,7 @@
     <title>Milwaukee Road U36C - Train Simulator Mod Archive</title>
     
     <!-- Favicon -->
-    <link rel="icon" type="image/jpg" href="https://files.trainsimarchive.org/media/favicon.jpg">
+    <link rel="icon" type="image/jpeg" href="favicon/favicon.ico">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
