--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                 <h1 class="font-bold text-xl">Welcome to Train Simulator Mod Archive!</h1>
                 <p class="mt-3">Welcome to Train Simulator Mod Archive, the largest official web archive of delisted and lost Train Simulator Classic content. We currently host archived content from TruRail Simulations, ClearTracks, UTS Creations and East Coast Simulations.</p>
                 <p class="mt-3">To look through our catalog of content, please use the provided links at the top of the page, or use the Search function. This project was started in September of 2023 and we hope to continue archiving lost content from the entire Train Simulator Classic scene for the foreseeable future.</p>
+                <p class="mt-3">If you like this website, please consider supporting us on Ko-fi or by clicking "Support Us" on the nav of this page. Any help is greatly appreciated!</p>
             </section>
             <section>
                 <div class="space-y-6">
@@ -165,14 +166,6 @@
                     </li>
                 </ul>
             </div>
-            <!-- Top downloads box (dynamically populated) -->
-            <div class="sidebar-section mt-4" id="topDownloadsBox">
-                <h3 class="text-base font-bold mb-3">Top Downloads</h3>
-                <div id="topDownloadsContainer">
-                    <p class="muted">Loading top downloads...</p>
-                </div>
-            </div>
-        </div>
     </main>
     <footer id="dynamicFooter">
         <div class="footer-content">
