--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -384,10 +384,10 @@
                     
                     <div class="mod-card">
                         <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_070a2fe1c184452f962131b97c419d60~mv2.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/ge-c44-9w-texture-upgrade.html" class="mod-card-link">
                                 <h3 class="mod-card-title">GE C44-9W Texture Upgrade</h3>
                             </a>
                             <p class="mod-card-description">Pack of color corrected repaints for GE's C44-9W Dash-9.</p>
