--- a/cleartracks/wp-caboose-pack.html
+++ b/cleartracks/wp-caboose-pack.html
@@ -8,7 +8,7 @@
     <title>Western Pacific Caboose Pack - Train Simulator Mod Archive</title>
     
     <!-- Favicon -->
-    <link rel="icon" type="image/jpeg" href="https://files.trainsimarchive.org/media/favicon.jpg">
+    <link rel="icon" type="image/jpeg" href="../favicon/favicon.ico">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -51,7 +51,7 @@
                             Archive
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="archiveDropdown">
-                            <li><a class="dropdown-item" href="../trurail-simulations">ClearTracks</a></li>
+                            <li><a class="dropdown-item" href="../trurail-simulations">TruRail Simulations</a></li>
                             <li><a class="dropdown-item" href="../cleartracks">ClearTracks</a></li>
                             <li><a class="dropdown-item" href="../uts-creations">UTS Creations</a></li>
                             <li><a class="dropdown-item" href="../east-coast-simulations">East Coast Simulations</a></li>
