--- a/trurail-simulations/milwaukee-road-u36c.html
+++ b/trurail-simulations/milwaukee-road-u36c.html
@@ -8,7 +8,7 @@
     <title>Milwaukee Road U36C - Train Simulator Mod Archive</title>
     
     <!-- Favicon -->
-    <link rel="icon" type="image/jpeg" href="favicon/favicon.ico">
+    <link rel="icon" type="image/jpeg" href="../favicon/favicon.ico">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -59,7 +59,6 @@
                             <li><a class="dropdown-item" href="../cleartracks">ClearTracks</a></li>
                             <li><a class="dropdown-item" href="../uts-creations">UTS Creations</a></li>
                             <li><a class="dropdown-item" href="../east-coast-simulations">East Coast Simulations</a></li>
-                            <li><a class="dropdown-item" href="../virtual-rail-creations">Virtual Rail Creations</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -88,7 +87,6 @@
             <a href="../cleartracks" class="mobile-nav-link mobile-nav-sublink">ClearTracks</a>
             <a href="../uts-creations" class="mobile-nav-link mobile-nav-sublink">UTS Creations</a>
             <a href="../east-coast-simulations" class="mobile-nav-link mobile-nav-sublink">East Coast Simulations</a>
-            <a href="../virtual-rail-creations" class="mobile-nav-link mobile-nav-sublink">Virtual Rail Creations</a>
         </div>
     </nav>
     <main class="mod-exconrail-main">
