--- a/trurail-simulations/adriana-county-bundle.html
+++ b/trurail-simulations/adriana-county-bundle.html
@@ -8,7 +8,7 @@
     <title>Adriana County Bundle - Train Simulator Mod Archive</title>
     
     <!-- Favicon -->
-    <link rel="icon" type="image/jpeg" href="favicon/favicon.ico">
+    <link rel="icon" type="image/jpeg" href="../favicon/favicon.ico">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
