--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -58,7 +58,6 @@
                             <li><a class="dropdown-item" href="cleartracks">ClearTracks</a></li>
                             <li><a class="dropdown-item" href="uts-creations">UTS Creations</a></li>
                             <li><a class="dropdown-item" href="east-coast-simulations">East Coast Simulations</a></li>
-                            <li><a class="dropdown-item" href="virtual-rail-creations">Virtual Rail Creations</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -86,7 +85,6 @@
             <a href="trurail-simulations" class="mobile-nav-link mobile-nav-sublink">TruRail Simulations</a>
             <a href="cleartracks" class="mobile-nav-link mobile-nav-sublink">ClearTracks</a>
             <a href="uts-creations" class="mobile-nav-link mobile-nav-sublink">UTS Creations</a>
-            <a href="east-coast-simulations" class="mobile-nav-link mobile-nav-sublink">East Coast Simulations</a>
         </div>
     </nav>
     <div class="privacy-main-wide">
@@ -138,7 +136,7 @@
                             <a href="trurail-simulations/csx-road-bundle" class="mod-card-link">
                                 <h3 class="mod-card-title">CSX Road Bundle</h3>
                             </a>
-                            <p class="mod-card-description">Mega CSX pack consisting of 3 locomotives and 6 freight cars.</p>
+                            <p class="mod-card-description">Multiple repaints of CSX locomotives and freight cars.</p>
                         </div>
                     </div>
                 </div>
@@ -459,7 +457,7 @@
                             <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/ols-f59phi-pack.html" class="mod-card-link">
                                 <h3 class="mod-card-title">Operation Lifesaver F59PHI Pack</h3>
                             </a>
                             <p class="mod-card-description">Four repaints of EMD's F59PHI locomotive ordered by Amtrak to depict the 'OLS' units.</p>
